wip: implement item detail activity and your base structure

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,5 +24,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".modules.home.HomeActivity" />
+        <activity android:name=".modules.itemdetail.ItemDetailActivity" />
     </application>
 </manifest>
